force-app/main/default/objects/Contest_Award_Recipients__c/Contest_Award_Recipients__c.object-meta.xml
<CustomObject>
    <description
  >A registrant who met the criteria to receive an award</description>
    <label>Contest Award Recipient</label>
    <nameField>
        <displayFormat>CAR-{0000}</displayFormat>
        <label>Contest Award Recipient No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contest Award Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>