force-app/main/default/objects/Contest_Award_Recipients__c/fields/Accepted_At__c.field-meta.xml
<CustomField>
    <fullName>Accepted_At__c</fullName>
    <description>The time the award was accepted by the recipient</description>
    <inlineHelpText
  >The time the award was accepted by the recipient</inlineHelpText>
    <label>Accepted At</label>
    <type>DateTime</type>
</CustomField>