force-app/main/default/objects/Contest_Award_Recipients__c/fields/Award_Title__c.field-meta.xml
<CustomField>
    <fullName>Award_Title__c</fullName>
    <formula>Contest_Award__r.Award_Title__c</formula>
    <inlineHelpText>To change, edit ‘Contest Award’</inlineHelpText>
    <label>Award Title</label>
    <type>Text</type>
</CustomField>