force-app/main/default/objects/Contest_Award_Recipients__c/fields/Contest_Award__c.field-meta.xml
<CustomField>
    <fullName>Contest_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The award earned</description>
    <inlineHelpText>Search “CA-“ for code list</inlineHelpText>
    <label>Contest Award</label>
    <referenceTo>Contest_Award__c</referenceTo>
    <relationshipLabel>Contest Award Recipients</relationshipLabel>
    <relationshipName>Contest_Award_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>