force-app/main/default/objects/Contest_Award_Recipients__c/fields/Event_or_Conference__c.field-meta.xml
<CustomField>
    <fullName>Event_or_Conference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The event the award was claimed</description>
    <inlineHelpText>The event the award was claimed</inlineHelpText>
    <label>Event or Conference</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Contest Award Recipients</relationshipLabel>
    <relationshipName>Contest_Award_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>