force-app/main/default/objects/Contest_Award_Recipients__c/fields/Non_Qual__c.field-meta.xml
<CustomField>
    <fullName>Non_Qual__c</fullName>
    <formula>Registration__r.Non_Qual__c</formula>
    <label>Non-Qual</label>
    <type>Checkbox</type>
</CustomField>