force-app/main/default/objects/Contest_Award_Recipients__c/fields/Registrant_Email__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Email__c</fullName>
    <formula>Registration__r.Registrant_Email__c</formula>
    <label>Registrant Email</label>
    <type>Text</type>
</CustomField>