force-app/main/default/objects/Contest_Award_Recipients__c/fields/Registrant_Name__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Name__c</fullName>
    <formula>Registration__r.Registrant_Name__r.Full_Name__c</formula>
    <label>Registrant Name</label>
    <type>Text</type>
</CustomField>