force-app/main/default/objects/Contest_Award_Recipients__c/fields/Registrant_Org_Dept__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Org_Dept__c</fullName>
    <formula>Registration__r.Badge_Org_Dept__c</formula>
    <label>Registrant Org / Dept</label>
    <type>Text</type>
</CustomField>