force-app/main/default/objects/Contest_Award_Recipients__c/fields/Registrant_Reg_Type__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Reg_Type__c</fullName>
    <formula>TEXT(Registration__r.Reg_Type__c)</formula>
    <label>Registrant Reg Type</label>
    <type>Text</type>
</CustomField>