force-app/main/default/objects/Contest_Award_Recipients__c/fields/Registrant_Title__c.field-meta.xml
<CustomField>
    <fullName>Registrant_Title__c</fullName>
    <formula>Registration__r.Registrant_Title__c</formula>
    <label>Registrant Title</label>
    <type>Text</type>
</CustomField>