force-app/main/default/objects/Contest_Award_Recipients__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The registrant to receive the award</description>
    <inlineHelpText>The registrant to receive the award</inlineHelpText>
    <label>Registration</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Contest Award Recipients</relationshipLabel>
    <relationshipName>Contest_Award_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>